config redis to botdetector